fixed z-index

--- a/code/imdbapi/web/css/style.css
+++ b/code/imdbapi/web/css/style.css
@@ -48,7 +48,7 @@ body #overlay {
     right: 0;
     background: #000;
     opacity: 1;
-    z-index: 10;
+    z-index: -10;
     transition-duration: 2000ms; }
 body.loaded #overlay {
     background: transparent;
